deployment/mesh-infra/istio/routing/path.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-virtualservice
spec:
  hosts:
  - "reccommender.localdomain"
  gateways:
  - ui-gateway
  http:
  - name: "reccommenderui-service"
    match:
    - uri:
        exact: "/"
    route:
      - destination:
           host: reccommenderui-service.default.svc.cluster.local
           port:
             number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reccommender-virtualservice
spec:
  hosts:
  - "reccommender.localdomain"
  gateways:
  - back-gateway
  http:
  - name: "reccommender-service"
    match:
    - uri:
        exact: "/"
    route:
      - destination:
           host: reccommender-service.default.svc.cluster.local
           port:
             number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: datapolicy-virtualservice
spec:
  hosts:
  - "reccommender.localdomain"
  gateways:
  - datapolicy-gateway
  http:
  - name: "datapolicy-service"
    match:
    - uri:
        exact: "/"
    route:
      - destination:
           host: datapolicy-service.default.svc.cluster.local
           port:
             number: 8075
